@@ -27,7 +27,7 @@ describe 'have_scope' do
       @matcher.description.should == 'have to scope itself to {} when :title is called'
 
       @matcher.with(1)
-      @matcher.description.should == 'have to scope itself to {} when :title is called with 1 as argument'
+      @matcher.description.should == 'have to scope itself to {} when :title is called with [1] as argument'
     end
 
     it 'should set is_scope? message' do
@@ -48,16 +48,16 @@ describe 'have_scope' do
     it { should have_scope(:recent) }
     it { should have_scope(:recent, :order => 'created_at DESC') }
 
-    it { should have_scope(:latest,    :with => 10, :limit => 10) }
-    it { should have_scope(:beginning, :with => 10, :offset => 10) }
-    it { should have_scope(:since,     :with => Time.at(0), :conditions => ["created_at > ?", Time.at(0)]) }
-    it { should have_scope(:between,   :with => [ 2, 10 ],  :conditions => [ "created_at > ? and created_at < ?", 2, 10 ]) }
+    it { should have_scope(:latest).with(10).limit(10) }
+    it { should have_scope(:beginning).with(10).offset(10) }
+    it { should have_scope(:since).with(Time.at(0)).conditions(["created_at > ?", Time.at(0)]) }
+    it { should have_scope(:between).with(2, 10).conditions(["created_at > ? and created_at < ?", 2, 10]) }
 
     it { should_not have_scope(:null) }
-    it { should_not have_scope(:latest,    :with => 5, :limit => 10) }
-    it { should_not have_scope(:beginning, :with => 5, :offset => 10) }
-    it { should_not have_scope(:since,     :with => Time.at(0), :conditions => ["created_at > ?", Time.at(1)]) }
-    it { should_not have_scope(:between,  :with => [ 2, 10 ], :conditions => [ "updated_at > ? and updated_at < ?", 2, 10 ]) }
+    it { should_not have_scope(:latest).with(5).limit(10) }
+    it { should_not have_scope(:beginning).with(5).offset(10) }
+    it { should_not have_scope(:since).with(Time.at(0)).conditions(["created_at > ?", Time.at(1)]) }
+    it { should_not have_scope(:between).with(2, 10).conditions(["updated_at > ? and updated_at < ?", 2, 10]) }
   end
 
   describe 'macros' do
